--- a/styles/template.css
+++ b/styles/template.css
@@ -1,18 +1,9 @@
 div.header  {
-    background-image: url("../images/header.jpg");
-    opacity: 0.8;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/header.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: auto;
-    padding: 50px;
-    margin-top: 0px;
-    background-position-y: -100px;
-}
-
-div.header > p {
-    padding-top: 15px;
-    padding-left: 120px;
-    padding-bottom: 15px;
+    padding: 55px 50px 15px 120px;
     font-size: 76px;
     letter-spacing: 1.5px;
     font-family: tahoma;
@@ -34,11 +25,11 @@ div.section  {
     background-color: black;
     color: white;
     text-align: center;
-    z-index: 1;
+    z-index: 0;
     left: 0;
-    bottom: 0;
-    position: absolute;
+    bottom: 0px;
     width: 100%;
+    position: absolute;
     overflow: hidden;
 }
 
@@ -51,4 +42,11 @@ div.section  {
 
 .footer a{
     font-size: 15px;
+}
+
+
+@media screen and (max-width: 800px) {
+    div.header{
+        font-size: 50px;
+    }
 }
