--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -6,7 +6,7 @@ html    {
 body   {
     color: black;
     background-color: white;
-    margin: 0px 0px 60px 0px;
+    margin: 50px 0px 65px 0px;
     font-family: Bitter;
     font-size: 70%;
 }
@@ -26,12 +26,17 @@ body   {
 .column33   {
     float: left;
     width: 33.33%;
+    overflow: hidden;
+    margin: 0%;
+    padding: 0%;
 }
 
 .column66 {
     float: left;
     width: 66.66%;
     margin: 0%;
+    overflow: hidden;
+    padding-bottom: 20px;
 }
 
 div.row:after  {
@@ -43,7 +48,7 @@ div.row:after  {
 }
 
 @media screen and (max-width: 900px)    {
-    .column {
+    .column33, .column66, .column {
         width: 100%;
     }
 }
@@ -58,6 +63,10 @@ img.resume  {
     width: 100%;
     height: 90%;
     border-block-color: 1px solid;
+}
+
+a.button    {
+    font-size: 14px;
 }
 
 a.button:link, a.button:visited {
@@ -78,8 +87,15 @@ a.button:hover, a.button:visited {
     box-shadow: 0px 1px 1px 0px black;
 }
 
-@media only screen and (max-width: 595px) {
-    body {
-      background-color: lightblue;
-    }
+.me  {
+    width: 260px;
+    height: auto;
+    margin: 0px 0px 0px 20%;
+    padding: 20px;
+    align-items: center;
+}
+
+.intro  {
+    margin: 0px 10% 0px 0px;
+    padding: 30px 0px 0px 20px;
 }
