--- a/styles/template.css
+++ b/styles/template.css
@@ -1,9 +1,9 @@
 div.header  {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/header.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url("../images/header.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: auto;
-    padding: 55px 50px 15px 120px;
+    padding: 10px 50px 15px 120px;
     font-size: 76px;
     letter-spacing: 1.5px;
     font-family: tahoma;
@@ -48,5 +48,6 @@ div.section  {
 @media screen and (max-width: 800px) {
     div.header{
         font-size: 50px;
+        padding-left: 50px; 
     }
 }
