--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -20,7 +20,7 @@ ul.navigation  {
     z-index: 1;
 }
 
-ul.navigation:hover {
+#navbar:hover {
     box-shadow: 0px 4px 5px 0px black;
 }
 
@@ -31,7 +31,7 @@ li.navigation    {
     box-sizing: border-box;
 }
 
-li.navigation::first-letter {
+#hidenav::first-letter {
     font-size: 15px;
 }
 
@@ -47,4 +47,8 @@ li.navigation a:link {
 
 li.navigation a:hover {
     color: #989898
+}
+
+@media screen and (max-width: 810px)    {
+    #hidenav    {display: none;}
 }
