responsive navigations and transitions

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -6,9 +6,10 @@ html    {
 body   {
     color: black;
     background-color: white;
-    margin: 50px 0px 65px 0px;
+    margin: 0px 0px 65px 0px;
     font-family: Bitter;
     font-size: 70%;
+    transition: 1s;
 }
 
 .heading   {
