--- a/styles/dropdown.css
+++ b/styles/dropdown.css
@@ -1,6 +1,10 @@
 .dropdown   {
-    position: relative;
-    display: inline-block;
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown a{
+    margin: 0%;
 }
 
 .dropdown-content   {
@@ -8,8 +12,8 @@
     position: absolute;
     background-color: black;
     box-shadow: 0px 4px 5px 0px black;
-    padding: 12px 16px;
-    z-index: 2;
+    padding: 2px 16px;
+    z-index: 1;
     margin-top: 45px;
 }
 
@@ -19,6 +23,8 @@
     display: block;
     min-width: 150px;
     padding: 15px 20px 15px 20px;
+    float: none;
+    text-align: left;
 }
 
 .dropdown-content a:hover   {
@@ -31,4 +37,25 @@
 
 .dropdown:hover .dropdown-content   {
     display: block;
+}
+
+@media screen and (max-width: 850px)    {
+    .dropdown {
+        float: none;
+        padding: 0%;
+    }
+
+    .dropdown-content   {
+        margin: 0%;
+        padding-left: 70px;
+        position: relative;
+    }
+
+    .dropdown-content a     {
+        background-color: #989898;
+    }
+
+    .dropdown-content a:hover   {
+        color: black;
+    }
 }
