--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -6,7 +6,7 @@ html    {
 
 body   {
     color: black;
-    background-color: white;
+    background-color: black;
     margin: 0px 0px 65px 0px;
     font-family: Bitter;
     font-size: 70%;
