--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -59,6 +59,7 @@ div.row:after  {
     margin: 1% 10% 0% 10%;
     padding: 0%;
     align-content: center;
+    background-color: white;
 }
 
 img.resume  {
