--- a/css/style.css
+++ b/css/style.css
@@ -450,6 +450,7 @@
     color: white;
 }
 
+.contact-section .social .google    {
     /* content: '<i class="fab fa-"></i>'; */
     transition: background-color .3s ease-out;
     /* transition: color .5s ease-out; */
