--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@
     background-attachment: scroll;
     background-size:cover;
     padding-bottom: 5rem;
+    display: none;
 }
 
 .heads   {
@@ -367,10 +368,86 @@
     border-right: .3rem solid #64a19d;
 } */
 
+
+
 .projects-section {
-    padding:10rem 0
+    padding-top: 4%;
+    padding-bottom: 5%;
+    background:linear-gradient(to bottom, #000000 0%, rgba(22, 22, 22, .9) 75%, rgba(17, 17, 17, 0.8) 100%)
 }
 
+.projects-section .sections  {
+    position: relative;
+    width: 70%;
+    height: auto;
+    padding: 0%;
+}
+
+.projects-section .featured-image   {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.project-overlay    {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0, 0, 0);
+    overflow: hidden;
+    width: 100%;
+    height: 14%;
+    transition: .5s ease-in-out;
+    border-top: solid 0.2rem #64a19d;
+    border-bottom: none;
+}
+
+
+.project-overlay p {
+    color: white;
+    width: 100%;
+}
+
+.titles {
+    font-size: 22px;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 0.25rem;
+    border-bottom: solid 0.1rem #ffffff;
+
+}
+
+.container:hover .project-overlay {
+    height: 98%;
+    background-color: rgba(0, 0, 0, 0.712);
+    border-top: none;
+    border-bottom: solid 0.2rem #64a19d;
+}
+/* 
+.container:hover .titles    {
+    text-transform: capitalize;
+} */
+
+.duration   {
+    font-size: 14px;
+    color: rgb(153, 153, 153);
+    /* border-bottom: solid 0.05rem #2867B2; */
+    padding: 0%;
+    margin: 0%;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* 
 .projects-section .featured-text {
     padding:2rem
 }
@@ -397,7 +474,7 @@
         border-width: .25rem;
         width:30%
     }
-}
+} */
 
 .signup-section {
     padding: 10rem 0;
