--- a/css/style.css
+++ b/css/style.css
@@ -364,14 +364,8 @@
     border-bottom: .2rem solid #64a19d;
 }
 
-/* #works  {
-    border-right: .3rem solid #64a19d;
-} */
-
-
-
 .projects-section {
-    padding-top: 4%;
+    padding-top: 3.5%;
     padding-bottom: 5%;
     background:linear-gradient(to bottom, #000000 0%, rgba(22, 22, 22, .9) 75%, rgba(17, 17, 17, 0.8) 100%)
 }
@@ -383,10 +377,12 @@
     padding: 0%;
 }
 
-.projects-section .featured-image   {
+.projects-section .featured-image-HS1   {
     display: block;
     width: 100%;
     height: auto;
+    opacity: 1;
+    transition: .5s ease-in-out;
 }
 
 .project-overlay    {
@@ -397,7 +393,7 @@
     background-color: rgb(0, 0, 0);
     overflow: hidden;
     width: 100%;
-    height: 14%;
+    height: 11%;
     transition: .5s ease-in-out;
     border-top: solid 0.2rem #64a19d;
     border-bottom: none;
@@ -410,12 +406,32 @@
 }
 
 .titles {
-    font-size: 22px;
+    font-size: 25px;
     font-weight: 800;
     text-transform: uppercase;
     letter-spacing: 0.25rem;
     border-bottom: solid 0.1rem #ffffff;
 
+}
+
+.duration   {
+    font-size: 16px;
+    color: rgb(114, 114, 114);
+    padding: 0%;
+    margin: 0%;
+}
+
+div.project-description  {
+    font-size: 17px;
+    color: rgb(185, 185, 185);
+    opacity: 0 !important;
+    transition: .5s ease-in-out;
+    visibility: none;
+    padding-right: 4px;
+}
+
+div.project-description ul   {
+    list-style-type: square;
 }
 
 .container:hover .project-overlay {
@@ -424,57 +440,58 @@
     border-top: none;
     border-bottom: solid 0.2rem #64a19d;
 }
-/* 
-.container:hover .titles    {
-    text-transform: capitalize;
-} */
 
-.duration   {
-    font-size: 14px;
-    color: rgb(153, 153, 153);
-    /* border-bottom: solid 0.05rem #2867B2; */
-    padding: 0%;
-    margin: 0%;
+.container:hover .project-description    {
+    opacity: 1 !important;
+    display: block;
 }
 
-
-
-
-
-
-
-
-
-
-
-/* 
-.projects-section .featured-text {
-    padding:2rem
+.container:hover .repo-button   {
+    opacity: 1;
 }
 
-@media (min-width: 992px) {
-    .projects-section .featured-text {
-        padding: 0 0 0 2rem;
-        border-left:.5rem solid #64a19d
-    }
+div.horizontal-scroll   {
+    background-color: transparent;
+    overflow: scroll;
+    white-space: nowrap;
+    transition: .5s ease-in-out;
 }
 
-.projects-section .project-text {
-    padding: 3rem;
-    font-size:90%
+div.horizontal-scroll a  {
+    background-color: transparent;
+    font-size: 15px;
+    display: inline-block;
+    border: 0.1rem solid #64a19d;
+    text-decoration-color: #64a19d;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 0.3rem;
+    margin-right: 5px;
+    transition: .5s ease-in-out;
 }
 
-@media (min-width: 992px) {
-    .projects-section .project-text {
-        padding:5rem
-    }
-
-    .projects-section .project-text hr {
-        border-color: #64a19d;
-        border-width: .25rem;
-        width:30%
-    }
-} */
+.repo-button    {
+    background-color: transparent;
+    font-size: 15px;
+    display: inline-block;
+    border: 0.1rem solid #64a19d;
+    color: #64a19d;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 0.3rem;
+    margin-top: 10px;
+    margin-right: 30px;
+    font-weight: bold;
+    transition: .5s ease-in-out;
+    float: right;
+    opacity: 0;
+} 
 
 .signup-section {
     padding: 10rem 0;
