--- a/css/main_style.css
+++ b/css/main_style.css
@@ -86,6 +86,7 @@ position: relative;
   background-size: 80%;
   animation: shining 3s linear infinite;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 
