--- a/css/about_style.css
+++ b/css/about_style.css
@@ -1,7 +1,10 @@
 .about-section {
     padding-top: 4.5%;
     padding-bottom: 5%;
-    background:linear-gradient(to bottom, #000000 0%, rgba(22, 22, 22, .9) 75%, rgba(17, 17, 17, 0.8) 100%)
+    background:linear-gradient(to bottom, #000000 0%, rgba(22, 22, 22, .9) 75%, rgba(17, 17, 17, 0.8) 100%), url("../img/about.png");
+    /* background-attachment: fixed; */
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .about-section p {
@@ -25,7 +28,7 @@
     height: 10%;
     float: right;
     border-radius: 50%;
-    margin-top: 5%;
+    margin-top: 1%;
     margin-left: 2%;
     /* max-width:450px; */
     max-width: 450px;
