--- a/css/masthead_style.css
+++ b/css/masthead_style.css
@@ -12,7 +12,7 @@
     min-height: 35rem;
     padding: 15rem 0;
     /* background: linear-gradient(to bottom, rgba(22, 22, 22, .3) 0, rgba(22, 22, 22, .7) 75%, #161616 100%), url(../img/bg-masthead.jpg); */
-    background-image: url(../img/header3.jpg);
+    background: url(../img/header3.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -26,7 +26,7 @@
     font-size: 2.5rem;
     line-height: 2.5rem;
     letter-spacing: .8rem;
-    background: -webkit-linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+    background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip:text;
     background-clip: text;
