--- a/css/main_style.css
+++ b/css/main_style.css
@@ -113,6 +113,30 @@ position: relative;
     color:#64a19d !important
 }
 
+#scroll a   {
+    background-color: transparent;
+}
+
+#negative {
+    margin-top: -40px;
+}
+
+#scroll a span{
+    margin-top: 12px;
+    position: absolute;
+    /* bottom: 0; */
+    left: 50%;
+    width: 16px;
+    height: 16px;
+    margin-left: -8px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotateZ(-45deg);
+    transform: rotateZ(-45deg);
+    -webkit-animation: arrow 1.5s infinite;
+    animation: arrow 1.5s infinite;
+    /* box-sizing: border-box; */
+}
 
 @-webkit-keyframes arrow {
   0% {
