--- a/css/main_style.css
+++ b/css/main_style.css
@@ -33,8 +33,47 @@ a:focus, a:hover {
     background: -webkit-linear-gradient(rgba(255, 255, 255, .9) 0%, rgba(255, 255, 255, .5) 80%,rgba(255, 255, 255, 0) 100%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip:text;
+    margin: 0rem 3rem 0rem 3rem;
 
     border-bottom: .2rem solid #64a19d;
+}
+
+@media (max-width: 1000px)  {
+  .heads {
+    font-size: 2rem;
+    line-height: 2.2rem;
+    border-bottom: 0.18rem solid #64a19d;
+    margin: 0rem 2.6rem 0rem 2.6rem;
+  }
+}
+
+@media (max-width: 780px) {
+  .heads {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    border-bottom: 0.15rem solid #64a19d;
+    margin: 0rem 2rem 0rem 2rem;
+  }
+}
+
+@media (max-width: 550px) {
+  .heads {
+    font-size: 1.2rem;
+    line-height: 2rem;
+    border-bottom: 0.12rem solid #64a19d;
+    letter-spacing: 0.1rem;
+    margin: 0rem 1.2rem 0rem 1.2rem;
+  }
+}
+
+@media (max-width: 350px){
+  .heads {
+    font-size: 1.2rem;
+    line-height: 2rem;
+    border-bottom: 0.12rem solid #64a19d;
+    letter-spacing: 0.1rem;
+    margin: 0rem .3rem 0rem .2rem;
+  }
 }
 
 .btn-primary:focus  {
