--- a/css/about_style.css
+++ b/css/about_style.css
@@ -1,10 +1,14 @@
 .about-section {
-    padding-top: 4%;
-    padding-bottom: 3%;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-top: 4.5%;
+    padding-bottom: 4.5%;
     background:linear-gradient(to bottom, #000000 0%, rgba(22, 22, 22, .9) 75%, rgba(17, 17, 17, 0.8) 100%), url("../img/about.png");
-    /* background-attachment: fixed; */
+    background-position-y: center;
     background-repeat: no-repeat;
     background-size: cover;
+    object-fit: cover;
 }
 
 .about-section p {
