--- a/css/masthead_style.css
+++ b/css/masthead_style.css
@@ -8,7 +8,7 @@
 .masthead {
     position: relative;
     width: 100%;
-    height: auto;
+    height: 100%;
     min-height: 35rem;
     padding: 15rem 0;
     /* background: linear-gradient(to bottom, rgba(22, 22, 22, .3) 0, rgba(22, 22, 22, .7) 75%, #161616 100%), url(../img/bg-masthead.jpg); */
@@ -42,6 +42,7 @@
     animation-duration: 1.5s;
     animation-delay: 2s;
     animation-fill-mode: forwards;
+    visibility: hidden;
 
 }
 
