--- a/css/about_style.css
+++ b/css/about_style.css
@@ -4,7 +4,7 @@
     height: 100%;
     padding-top: 4.5%;
     padding-bottom: 4.5%;
-    background:linear-gradient(to bottom, #000000 0%, rgba(22, 22, 22, .9) 75%, rgba(17, 17, 17, 0.8) 100%), url("../img/about.png");
+    background: linear-gradient(to bottom, #000000 0%, rgba(00, 00, 00, .9) 75%, rgba(00, 00, 00, 0.8) 100%);
     background-position-y: center;
     background-repeat: no-repeat;
     background-size: cover;
