--- a/css/masthead_style.css
+++ b/css/masthead_style.css
@@ -73,7 +73,7 @@
     .masthead h1 {
         font-size: 5rem;
         line-height:4rem;
-        margin-bottom: 2.4rem;
+        /* margin-bottom: 2.4rem; */
     }
 
 }
