--- a/css/main_style.css
+++ b/css/main_style.css
@@ -213,3 +213,16 @@ position: relative;
     opacity: 0;
   }
 }
+
+.about-section {
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,.75);
+}
+.skill-section {
+    box-shadow: 0 5px 5px 0 rgb(0, 0, 0);
+}
+.projects-section {
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,.75);
+}
+.experience-section {
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,.75);
+}
