--- a/css/skills_style.css
+++ b/css/skills_style.css
@@ -80,7 +80,7 @@
 }
 
 .cplusplus:hover {
-    color: rgb(143, 29, 59);
+    color: rgb(165, 32, 68);
     transition: color .3s ease-in;
 }
 
@@ -90,9 +90,10 @@
 }
 
 .mysql:hover {
-    color: rgb(38, 96, 134);
+    color: white;
     transition:color .3s ease-in;
 }
+
 
 .android:hover {
     color: rgb(171, 194, 82);
@@ -105,7 +106,7 @@
 }
 
 .css:hover {
-    color: rgb(43, 94, 146);
+    color: rgb(54, 117, 180);
     transition: color .3s ease-in;
 }
 
@@ -115,12 +116,17 @@
 }
 
 .bootstrap:hover {
-    color: rgb(57, 45, 83);
+    color: rgb(33, 26, 49);
     transition: color .3s ease-in;
 }
 
 .git:hover {
     color: white;
+    transition: color .3s ease-in;
+}
+
+.react:hover {
+    color: rgb(140, 209, 247);
     transition: color .3s ease-in;
 }
 
