--- a/css/about_style.css
+++ b/css/about_style.css
@@ -2,8 +2,8 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding-top: 4.5%;
-    padding-bottom: 4.5%;
+    padding-top: 7%;
+    padding-bottom: 7%;
     background: linear-gradient(to bottom, #000000 0%, rgba(00, 00, 00, .9) 75%, rgba(00, 00, 00, 0.8) 100%);
     background-position-y: center;
     background-repeat: no-repeat;
@@ -27,7 +27,7 @@
 }
 
 .about-intro p  {
-    font-family: 'Sura', serif;
+    font-family: serif;
 }
 
 .about-section .headshot {
