--- a/css/navbar_style.css
+++ b/css/navbar_style.css
@@ -93,7 +93,7 @@
 
     #mainNav.navbar-shrink .nav-link {
         color: #161616;
-        padding: 1.5rem 1.5rem 1.5rem;
+        padding: 1.5rem 1rem;
         border-bottom:.25rem solid transparent
     }
 
