--- a/css/projects_style.css
+++ b/css/projects_style.css
@@ -6,6 +6,7 @@
     background-blend-mode: darken;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .duration   {
@@ -104,7 +105,7 @@ div.horizontal-scroll a  {
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
 
-.project-headings {
+.clickable-section {
     cursor: pointer;
 }
 
