--- a/css/skills_style.css
+++ b/css/skills_style.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 5%;
+    background-position: center;
 }
 
 .skill-section .name    {
